# argumentum

./: .clang-tidy  .gitignore  Argumentum.h  LICENSE  README.md
example/: CMakeLists.txt  JsonArgumentHandler.cpp  JsonArgumentHandler.h  main.cpp  test.json
